--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -171,14 +171,14 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 \acresetall
 \mainmatter
 
-\chapter{Motivation and Introduction}
-% input individual chapters files
-\input{1-introduction}
+% \chapter{Motivation and Introduction}
+% % input individual chapters files
+% \input{1-introduction}
 
-\input{2-literature/20-literature}
-\input{3-methods/30-methods}
-\input{4-benchmark-results/40-benchmark}
-\input{5-proposal/50-outline}
+% \input{2-literature/20-literature}
+% \input{3-methods/30-methods}
+% \input{4-benchmark-results/40-benchmark}
+% \input{5-proposal/50-outline}
 
 % \chapter{Conclusions}
 
