adds katy to committee list

--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -108,6 +108,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 \degreeyear{2024}
 \committee{
     Research Scientist Madicken Munk, Chair\\
+    Professor Kathryn D. Huff\\
     Professor James F. Stubbins\\
     Professor Clifford Singer\\
     Assistant Professor McKenzie F. Johnson\\
