--- a/docs/uiucthesis2021.sty
+++ b/docs/uiucthesis2021.sty
@@ -44,8 +44,8 @@
 \def\author#1{\gdef\@author{#1}\MakeUppercase{\protect\@mkupauthor{#1}}}
 \def\phdthesis{\def\@degree{Doctor of Philosophy}
     \def\degree{Ph.D.}
-    % \def\@thesisname{DISSERTATION} % uncomment this line for the final dissertation.
-    \def\@thesisname{PRELIMINARY EXAMINATION}
+    \def\@thesisname{DISSERTATION} % uncomment this line for the final dissertation.
+    % \def\@thesisname{PRELIMINARY EXAMINATION}
     \def\@committeename{Doctoral Committee:}
     }
 \def\msthesis{\def\@degree{Master of Science}
