document with outline

--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -94,7 +94,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 % uncomment the below to show a grid on all pages
 % \usepackage[grid, gridunit=in, gridcolor=blue!40, subgridcolor=blue!20]{eso-pic}
 
-\addbibresource{2023-dotson-prelim.bib}
+\addbibresource{2025-dotson-phd.bib}
 
 \newcounter{counterforappendices}
 
@@ -124,11 +124,11 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 % hundred doctoral students\ldots.
 % \end{abstract}
 
-% \begin{dedication}
-% [F]or the kids like me who got ADHD
+\begin{dedication}
+[F]or the kids like me who got ADHD
 
-% \hspace{4em} --- Joyner Lucas, ``Isis''
-% \end{dedication}
+\hspace{4em} --- Joyner Lucas, ``Isis''
+\end{dedication}
 
 % \begin{acknowledgments}   
 % People to acknowledge
@@ -142,7 +142,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 %     \item Gwendolyn Chee
 %     \item Roberto Fairhurst
 %     \item Members of ARFC
-%     \item The Honorable Professor Kathryn D. Huff
+    %   \item John Albers (for securing interviews)
 % \end{itemize}
 % \end{acknowledgments}
 
@@ -172,6 +172,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 \acresetall
 \mainmatter
 
+\input{00-outline}
 % \chapter{Motivation and Introduction}
 % % input individual chapters files
 % \input{1-introduction}
@@ -182,8 +183,6 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 % \input{5-proposal/50-outline}
 
 % \chapter{Conclusions}
-
-% We conclude that graduate students like coffee.
 
 % per Graduate College preference, place the \appendix and the appendices content before the
 % bibliography (here) only if the appendices contain references.
