--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -16038,10 +16038,87 @@ expert judgments (author)},
 	file = {Full Text:/Users/samdotson/Zotero/storage/TQ76FDUZ/Ross et al. - 2022 - Intersections of disadvantaged communities and ren.pdf:application/pdf},
 }
 
-@article{dotson_osier_nodate,
+@article{dotson_osier_2024,
 	title = {Osier: {A} {Python} package for multi-objective energy system optimization},
 	abstract = {Transitioning to a clean energy economy will require expanded energy infrastructure. An equitable, or just, transition further requires the recognition of the people and communities directly affected by this transition. However, public preferences may be ignored during decision-making processes related to energy infrastructure due to a lack of technical rigor or expertise [@johnson:2021]. This challenge is further complicated by the fact that people have and express preferences over many dimensions simultaneously. Multi-objective optimization offers a method to help decision makers and stakeholders understand the problem and analyze tradeoffs among solutions [@liebman:1976]. Although, to date, no open-source multi-objective energy modeling frameworks exist. Open-source multi-objective energy system framework (osier) is a Python package for designing and optimizing energy systems across an arbitrary number of dimensions. osier was designed to help localized communities articulate their energy preferences in a technical manner without requiring extensive technical expertise. In order to facilitate more robust tradeoff analysis, osier generates a set of solutions, called a Pareto front, that are composed of a number of technology portfolios. The Pareto front is calculated using multi-objective optimization using evolutionary algorithms. osier also extends the common modeling-to-generate-alternatives (MGA) algorithm into N-dimensional objective space, as opposed to the conventional single-objective MGA. This allows users to investigate the near-optimal space for appealing alternative solutions. In this way, osier may aid modelers in addressing procedural and recognition justice.},
 	language = {en},
 	journal = {Journal of Open Source Software},
 	author = {Dotson, Samuel G. and Munk, Madicken},
+	year = {2024},
+}
+
+@article{hochbaum_best_1985,
+	title = {A {Best} {Possible} {Heuristic} for the k-{Center} {Problem}},
+	volume = {10},
+	url = {http://www.jstor.org/stable/3689371},
+	abstract = {In this paper we present a 2-approximation algorithm for the k-center problem with triangle
+inequality. This result is "best possible" since for any 8 {\textless} 2 the existence of 8-approximation
+algorithm would imply that P = NP. It should be noted that no 3-approximation algorithm,
+for any constant 8, has been reported to date. Linear programming duality theory provides
+interesting insight to the problem and enables us to derive, in O(lElloglEl) time, a solution
+with value no more than twice the k-center optimal value.
+A by-product of the analysis is an O(fEI) algorithm that identifies a dominating set in G2,
+the square of a graph G, the size of which is no larger than the size of the minimum
+dominating set in the graph G. The key combinatorial object used is called a strong stable set,
+and we prove the NP-completeness of the corresponding decision problem.},
+	language = {en},
+	number = {2},
+	journal = {Mathematics of Operations Research},
+	author = {Hochbaum, Dorit S. and Shmoys, David B.},
+	month = may,
+	year = {1985},
+	pages = {180--184},
+	file = {Hochbaum and work(s) - 1985 - A Best Possible Heuristic for the k-Center Problem.pdf:/Users/samdotson/Zotero/storage/UZALSZHR/Hochbaum and work(s) - 1985 - A Best Possible Heuristic for the k-Center Problem.pdf:application/pdf},
+}
+
+@article{gonzalez_clustering_1985,
+	title = {Clustering to minimize the maximum intercluster distance},
+	volume = {38},
+	issn = {0304-3975},
+	url = {https://www.sciencedirect.com/science/article/pii/0304397585902245},
+	doi = {10.1016/0304-3975(85)90224-5},
+	abstract = {The problem of clustering a set of points so as to minimize the maximum intercluster distance is studied. An O(kn) approximation algorithm, where n is the number of points and k is the number of clusters, that guarantees solutions with an objective function value within two times the optimal solution value is presented. This approximation algorithm succeeds as long as the set of points satisfies the triangular inequality. We also show that our approximation algorithm is best possible, with respect to the approximation bound, if P ≠ NP.},
+	urldate = {2024-11-06},
+	journal = {Theoretical Computer Science},
+	author = {Gonzalez, Teofilo F.},
+	month = jan,
+	year = {1985},
+	keywords = {Algorithms, approximation algorithms, clustering, minimizing the maximum intercluster distance, NP-completeness},
+	pages = {293--306},
+	file = {Gonzalez - 1985 - Clustering to minimize the maximum intercluster di.pdf:/Users/samdotson/Zotero/storage/MT5DDW7S/Gonzalez - 1985 - Clustering to minimize the maximum intercluster di.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Zotero/storage/S5TRFQ67/0304397585902245.html:text/html},
+}
+
+@article{johannsen_municipal_2023,
+	title = {Municipal energy system modelling – {A} practical comparison of optimisation and simulation approaches},
+	volume = {269},
+	issn = {0360-5442},
+	url = {https://www.sciencedirect.com/science/article/pii/S0360544223001974},
+	doi = {10.1016/j.energy.2023.126803},
+	abstract = {This paper investigates the impact of applying optimisation and simulation approaches for energy system modelling and scenario design in a municipal context. In doing so, the previous understanding of what constitutes “optimisation” and “simulation” is expanded with further distinctions and it is documented how the outlined modelling approaches are applied in the existing literature. In a practical comparison, it is tested how the choice of modelling approach influences the design of future energy system scenarios for a municipal case study. The energy system scenarios and results obtained from a proposed stepwise simulation approach are compared to an established multi-objective optimisation approach. The results show that for the investigated municipal case it is possible to obtain results with a simulation-based approach that are comparable to the results obtained from multi-objective optimisation. Ultimately, the choice of modelling approach is a complex issue in which modellers must consider the necessary degree of modelling freedom, stakeholder involvement, and available system knowledge. Modellers need to consider not only what tool to use, but also how it is used; a tool can be used for both optimisation and simulation, and both can be valid approaches for developing future energy system scenarios.},
+	urldate = {2024-03-06},
+	journal = {Energy},
+	author = {Johannsen, Rasmus Magni and Prina, Matteo Giacomo and Østergaard, Poul Alberg and Mathiesen, Brian Vad and Sparber, Wolfram},
+	month = apr,
+	year = {2023},
+	keywords = {Energy system modelling, EnergyPLAN, EPLANopt, Municipal energy system scenarios, Optimisation, Simulation},
+	pages = {126803},
+	file = {Full Text:/Users/samdotson/Zotero/storage/Q4J4NJQT/Johannsen et al. - 2023 - Municipal energy system modelling – A practical co.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Zotero/storage/Q2ZB22ZQ/S0360544223001974.html:text/html},
+}
+
+@article{ben_amer_too_2020,
+	title = {Too complicated and impractical? {An} exploratory study on the role of energy system models in municipal decision-making processes in {Denmark}},
+	volume = {70},
+	issn = {2214-6296},
+	shorttitle = {Too complicated and impractical?},
+	url = {https://www.sciencedirect.com/science/article/pii/S2214629620302486},
+	doi = {10.1016/j.erss.2020.101673},
+	abstract = {Energy system models can contribute to the transition to low-carbon energy systems by helping devise pathways and calculate costs of energy policies and targets. As such, they are intended to provide support for energy planning, especially at the national level. Since energy system models are often developed outside urban contexts, their municipal policy relevance cannot be taken for granted. It is still unclear to what extent and how energy system models are applied to create municipal energy strategies and who uses them. This exploratory study aims to shed light on these aspects by examining the use of modelling tools and their outputs by municipal planners. We conducted interviews with practitioners from Danish municipalities and evaluated them using qualitative content analysis. This paper finds that the interviewees' use of software tools depends on how they perceive the functionality and complicatedness of the tools. The planners we interviewed prefer spreadsheet-based CO2 calculation or evaluation tools to energy system models, which in turn are used by heat supply companies, consultancies or universities. The practitioners we interviewed collaborate with model developers and users to further utilize model outputs. The incorporation of results from models or spreadsheet tools takes place mostly in the beginning of energy planning projects. This study suggests that models and the modelling practice can be improved with: open data, assumptions and models, collaboration across planning levels and improving links between technical modelling and practical implementation.},
+	urldate = {2024-02-21},
+	journal = {Energy Research \& Social Science},
+	author = {Ben Amer, Sara and Gregg, Jay S. and Sperling, Karl and Drysdale, David},
+	month = dec,
+	year = {2020},
+	keywords = {Cities, Energy modelling, Energy system models, Municipal decision-making, Strategic energy planning, Urban energy transitions},
+	pages = {101673},
+	file = {Submitted Version:/Users/samdotson/Zotero/storage/E4VEM9RS/Ben Amer et al. - 2020 - Too complicated and impractical An exploratory st.pdf:application/pdf},
 }
