--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -105,7 +105,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 \department{Nuclear, Plasma, and Radiological Engineering}
 % \concentration{}
 \phdthesis
-\degreeyear{2024}
+\degreeyear{2025}
 \committee{
     Research Scientist Madicken Munk, Chair\\
     Professor Kathryn D. Huff\\
@@ -125,7 +125,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 % \end{abstract}
 
 \begin{dedication}
-[F]or the kids like me who got ADHD
+[F]or the kids like me who got ADHD.
 
 \hspace{4em} --- Joyner Lucas, ``Isis''
 \end{dedication}
@@ -142,6 +142,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 %     \item Gwendolyn Chee
 %     \item Roberto Fairhurst
 %     \item Members of ARFC
+%     \item Ceser Zambrano (if he helps me with data from the SET tool.)
     %   \item John Albers (for securing interviews)
 % \end{itemize}
 % \end{acknowledgments}
