--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -50,3 +50,6 @@
 \acro{snf}[SNF]{spent-nuclear-fuel}
 \acro{smr}[SMR]{small modular reactor}
 \acrodefplural{smr}[SMRs]{small modular reactors}
+\acro{ipa}[IPA]{Illinois Power Agency}
+\acro{icc}[ICC]{Illinois Commerce Commission}
+\acro{set}[SET tool]{Screening and Evaluation Tool}
