adds literature review to main section

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -1,14 +1,22 @@
 \chapter{Introduction}
 \chapter{Literature Review}
+\label{chapter:lit-review}
 
-\textcolor{red}{To the literature review, I also want to add a section 
-discussing the research on societal risk and risk acceptability. E.g., F-N
-curves.}
+\textcolor{red}{To section ``2.4.2 Accounting for Uncertainty'' I want to add 
+a paragraph describing a third type of uncertainty: Normative uncertainty 
+\cite{taebi_governing_2020}. I might want to allude to this type of uncertainty
+earlier when I talk about the ``technical solutions'' to climate change (and why
+there are so many potential solutions, but little agreement). This will support
+the following chapter/section about the conceptual framework of modeling. ``How
+can modelers change to accommodate this new understanding of decision making?''}
 
 \textcolor{red}{To the literature review, I want to add a section discussing 
 the research on modeling at the municipal level. These papers start with the 
 following: 
 \cite{mckenna_combining_2018,johannsen_municipal_2023,ben_amer_too_2020}.}
+
+\input{2-literature/20-literature}
+
 
 \chapter{\acf{osier}}
 \label{chapter:osier}
