--- a/docs/2-literature/20-literature.tex
+++ b/docs/2-literature/20-literature.tex
@@ -1,5 +1,3 @@
-\chapter{Literature Review}
-\label{chapter:lit-review}
 Every year, world leaders meet to discuss plans to address climate change at the
 COP summit. In 1995, world leaders established a set of targets with the Kyoto
 Protocol \cite{united_nations_kyoto_1998} and again with the 2016 Paris Climate
@@ -29,8 +27,9 @@ models.
 % disfavor energy projects.
 
 \input{2-literature/23-social-movements}
-% \input{2-literature/26-nuclear-energy} \input{2-literature/27-renewables}
-% \input{2-literature/28-procedures.tex}
+% \input{2-literature/26-nuclear-energy} 
+% \input{2-literature/27-renewables}
+% \input{2-literature/28-procedures}
 \input{2-literature/25-energy-justice}
 \input{2-literature/21-esoms}
 \input{2-literature/22-moop}
