--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -79,6 +79,8 @@ This section connects to the normative and descriptive portions of modeling.
 
 \subsection{Simplified dispatch}
 
+\section{\acf{mga}}
+This section talks about handling ``structural uncertainty'' with \ac{osier}.
 
 \chapter{Benchmark Results}
 \label{chapter:benchmark-results}
@@ -147,10 +149,43 @@ interfere with its adoption.
 
 Although I originally set out to conduct a limited case study of Chambana, I
 discovered that municipalities in Illinois do not, in general, have the decision
-making authority to make choices specific choices about their energy supply.
+making authority to make specific choices about their energy supply.
 Thus, I expanded my study to the state level; interviewing people from the
 \ac{ipa} and \ac{icc}. This expanded scope provided evidence for structural
 challenges blocking municipal influence from energy planning processes. Further,
 this evinces a tension among distributive, procedural, and recognition justice.
+
+\section{Municipal Levers: How municipalities make choices about their energy supply}
+There are generally four ways municipalities can make choices about their energy supply.
+
+\subsection{\ac{mca}}
+This is where municipalities participate in electricity markets on behalf of
+their residents. Although this allows municipalities to choose an energy supply
+besides the standard portfolio provided by an electric utility, municipalities
+do not have full control over their energy supply. Instead, municipalities
+negotiate for a few portfolios through a bidding process. While they can specify
+some criteria, such as a percentage of renewable energy, the specific generation
+mix depends on the company that developed the portfolio bid. Further, residents
+are still allowed to opt-out of \ac{mca} and elect the standard portfolio
+provided by their electric utility.
+
+\subsection{Utility ownership}
+Some municipalities in Illinois, such as Naperville, own their own distribution
+system. This gives a municipality greater control over the design of their
+utility system and allows a municipality to make decisions about the tradeoff
+between cost and resiliency. For example, Naperville undergounded most of the
+electric distribution system and new distribution is automatically undergounded.
+However, this model does not award control of electric supply to the
+municipality, which must procure electricity through another entity such as the
+\acf{imea}.
+
+\subsection{Municipal-owned generation}
+In very few cases, a municipality may own some of its own generation. \ac{uiuc}
+owns a coal and natural gas plant, a solar array, chilled water storage, and
+participates in a \ac{ppa} to purchase wind power. More commonly, municipalities
+will lease land cheaply to a solar company, for example, and purchase some or all
+of the rights to that electricity through a \ac{ppa}. 
+
+\subsection{Municipal-owned buildings}
 
 \chapter{Conclusions}
