--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -53,3 +53,6 @@
 \acro{ipa}[IPA]{Illinois Power Agency}
 \acro{icc}[ICC]{Illinois Commerce Commission}
 \acro{set}[SET tool]{Screening and Evaluation Tool}
+\acro{mca}[MCA]{municipal choice aggregation}
+\acro{imea}[IMEA]{Illinois Municipal Electric Agency}
+\acro{ppa}[PPA]{power purchase agreement}
