updates outline and other sections

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -10,12 +10,8 @@ there are so many potential solutions, but little agreement). This will support
 the following chapter/section about the conceptual framework of modeling. ``How
 can modelers change to accommodate this new understanding of decision making?''}
 
-\textcolor{red}{To the literature review, I want to add a section discussing 
-the research on modeling at the municipal level. These papers start with the 
-following: 
-\cite{mckenna_combining_2018,johannsen_municipal_2023,ben_amer_too_2020}.}
 
-\input{2-literature/20-literature}
+% \input{2-literature/20-literature}
 
 
 \chapter{\acf{osier}}
@@ -81,6 +77,19 @@ This section connects to the normative and descriptive portions of modeling.
 
 \section{\acf{mga}}
 This section talks about handling ``structural uncertainty'' with \ac{osier}.
+
+\textcolor{red}{
+\section{Limitations of \ac{osier}}
+
+This section describes some of the limitations in \ac{osier}'s modeling details
+and scope. For example, \ac{osier} does not model interactions between the
+environment and the energy system. It also does not include a way to model the
+effect of carbon emissions and/or any kind of climate forcing from heat-trapping
+emissions nor any kind of geoengineering measures.
+
+This responds to some of Cliff's comments on \ac{osier}.
+}
+
 
 \chapter{Benchmark Results}
 \label{chapter:benchmark-results}
