--- a/docs/2-literature/20-literature.tex
+++ b/docs/2-literature/20-literature.tex
@@ -33,4 +33,9 @@ models.
 \input{2-literature/25-energy-justice}
 \input{2-literature/21-esoms}
 \input{2-literature/22-moop}
+\textcolor{red}{\section{Hyper-local energy system modeling}}
+\textcolor{red}{To the literature review, I want to add a section discussing 
+the research on modeling at the municipal level. These papers start with the 
+following: 
+\cite{mckenna_combining_2018,johannsen_municipal_2023,ben_amer_too_2020}.}
 \input{2-literature/24-justice-esoms}
