--- a/docs/2-literature/22-moop.tex
+++ b/docs/2-literature/22-moop.tex
@@ -193,8 +193,8 @@ systems optimization, there are significant limitations.
     \item{There are at most three modeled objectives
     \cite{riou_multi-objective_2021,de-leon_almaraz_deployment_2015,
     de-leon_almaraz_assessment_2013}.}
-    \item{Where traditional \acp{esom} have many mature frameworks (as shown in
-    Table \ref{tab:esoms}, there are no frameworks that use \ac{moo}.
+    \item{While traditional \acp{esom} have many mature frameworks (as shown in
+    Table \ref{tab:esoms}), there are no frameworks that use \ac{moo}.
     Simultaneously, none of the studies in Table \ref{tab:moop-literature}
     developed a framework. Prina et al. developed a bespoke and unlicensed model
     called ``Oemof-moea,'' however this does not constitute a framework.}
