adds directory and section specific files for osier chapter

--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -10,6 +10,7 @@
 \acro{temoa}[\texttt{Temoa}]{Tools for Energy Model Optimization and Analysis}
 \acro{pygen}[\texttt{PyGenesys}]{Python for Generating Energy Systems}
 \acro{pymoo}[\texttt{Pymoo}]{Multi-Objective Optimization in Python}
+\acro{pyomo}[\texttt{Pyomo}]{Python-based, open-source optimization modeling language}
 \acro{hsj}[HSJ]{Hop-Skip-Jump algorithm}
 \acro{mga}[MGA]{Modeling-to-Generate-Alternatives}
 \acro{moo}[MOO]{multi-objective optimization}
