--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -13,82 +13,7 @@ can modelers change to accommodate this new understanding of decision making?''}
 
 % \input{2-literature/20-literature}
 
-
-\chapter{\acf{osier}}
-\label{chapter:osier}
-
-This chapter introduces \acf{osier}, a novel open-source energy system modeling
-framework for \acl{moo} \cite{dotson_osier_nodate}. There are currently no
-\acp{esom} that enable \ac{moo} and \ac{osier} fills that gap. Figure 
-\ref{fig:osier_flow} illustrates the flow of data into and within \ac{osier}.
-
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\columnwidth]{figures/osier_flow}
-    \caption{The flow of data into and within \ac{osier}}
-    \label{fig:osier_flow}
-\end{figure}
-
-Technology data, objectives, constraints, and a dispatch model are all features
-within \ac{osier}, while \ac{pymoo} drives the optimization of these objectives.
-The dispatch model is independently executable for inspecting specific test
-cases and mapping solutions from other solvers onto \ac{osier}'s objective
-space. The next section elaborates on the dispatch model's formulation.
-
-\textcolor{red}{This chapter is mostly written but there are a few things that
-should be added.}
-
-\textcolor{red}{\begin{enumerate}
-    \item Update to the \ac{mga} algorithm.
-    \item Add description of the ``greedy'' farthest-first traversal algorithm.
-    \item Move the description of \ac{pygen} and \ac{temoa} to either a
-    different section or a different chapter since those pieces do not belong to
-    \ac{osier} itself.
-    \item Add a description of the ``simplified approach'' to capacity expansion
-    that will be added to the model and used the example chapter.
-    \item Remove the description of model data.
-    \item Add a description of the hypothetical \ac{osier} procedure, as
-    proposed in the prelim.
-\end{enumerate}}
-
-\section{Inputs}
-
-\textcolor{red}{General thoughts:}
-
-Accurate input data is essential but represents a challenging step in the
-modeling process. \ac{osier} attempts to lower this barrier by providing a
-variety of technology data from ``reliable'' sources.
-
-This section connects to the normative and descriptive portions of modeling. 
-
-\subsection{Technology Data}
-
-\subsection{Objectives}
-
-\subsection{Constraints}
-
-\section{Genetic Algorithms}
-
-\section{Dispatch Model}
-
-\subsection{Economic/Merit-order dispatch}
-
-\subsection{Simplified dispatch}
-
-\section{\acf{mga}}
-This section talks about handling ``structural uncertainty'' with \ac{osier}.
-
-\textcolor{red}{
-\section{Limitations of \ac{osier}}
-
-This section describes some of the limitations in \ac{osier}'s modeling details
-and scope. For example, \ac{osier} does not model interactions between the
-environment and the energy system. It also does not include a way to model the
-effect of carbon emissions and/or any kind of climate forcing from heat-trapping
-emissions nor any kind of geoengineering measures.
-
-This responds to some of Cliff's comments on \ac{osier}.
-}
+\input{3-osier/30-intro}
 
 
 \chapter{Benchmark Results}
@@ -147,7 +72,10 @@ and an improvement on the \acf{set} \cite{wigeland_nuclear_2014}.}
 
 \subsection{Discussion}
 
+
 \chapter{Using modeling to enhance just outcomes}
+\iffalse
+
 
 This chapter addresses my proposal to ``validate'' \ac{osier} by conducting a
 case study of energy planning processes in Champaign-Urbana through interviews
@@ -196,5 +124,7 @@ will lease land cheaply to a solar company, for example, and purchase some or al
 of the rights to that electricity through a \ac{ppa}. 
 
 \subsection{Municipal-owned buildings}
+
+\fi
 
 \chapter{Conclusions}
