begins section on hierarchical dispatch

--- a/docs/3-osier/31-inputs.tex
+++ b/docs/3-osier/31-inputs.tex
@@ -2,7 +2,7 @@
 
 \textcolor{red}{General thoughts:}
 
-Accurate input data is essential but represents a challenging step in the
+Accurate input data are essential but represents a challenging step in the
 modeling process. \ac{osier} attempts to lower this barrier by providing a
 variety of technology data from ``reliable'' sources.
 
