--- a/docs/3-osier/33-dispatch-model.tex
+++ b/docs/3-osier/33-dispatch-model.tex
@@ -83,7 +83,7 @@ technology is given by
 \end{align}
 
 \noindent
-This equation guarantees that a standard technology will produce energy between
+This equation guarantees that a standard technology will have a power output between
 zero and its rated capacity. In addition to Equation \ref{eq:std_tech_output},
 a ``ramping'' technology will calculate the maximum and minimum attainable power
 levels given its ramp rates and the problem's time resolution. The power output
@@ -96,19 +96,38 @@ is given by
          P_{max} & x_{g,t-1} \leq \textbf{CAP}_g \leq D_t
      \end{cases}
      \intertext{where}
-     P_{min} &= \text{max}\left(0, \left(x_{g,t-1}-\rho_g^{down}\Delta t\right)\right),\nonumber\\
-     P_{max} &= \text{min}\left(\left(x_{g,t-1}+\rho_g^{up}\Delta t\right), \textbf{CAP}_g\right).\nonumber
+     P_{min} &= \text{max}\left(0, \left(x_{g,t-1}-\rho_g^{down}\Delta \tau\right)\right),\nonumber\\
+     P_{max} &= \text{min}\left(\left(x_{g,t-1}+\rho_g^{up}\Delta \tau\right), \textbf{CAP}_g\right).\nonumber
 \end{align}
 
 \textcolor{red}{$\rho_g$ is not the same $rho_g$ as in the LP formulation! Maybe
-choose another variable and explain its meaning... It should be the "ramp up"
+choose another variable and explain its meaning... It should be the "ramp up/down"
 which is the ramp rate times the capacity.}
 
 Finally, a storage technology has a charging and discharging mode, depending on
-whether the current demand level is positive or negative.
+whether the current demand level is positive or negative. A storage technology
+extends Equation \ref{eq:std_tech_output} by checking that the storage unit has enough
+\textit{storage} capacity. Thus the power output is given by
 
+\begin{align}
+    x_{g,t} &= \begin{cases}
+        -\frac{E_{in}}{\Delta \tau} & D_t < 0\\
+        \frac{E_{out}}{\Delta \tau} & D_t \geq 0\\
+    \end{cases}
+    \intertext{where}
+    E_{in} &= \text{min}\left(\left(\textbf{CAP}^S_g-\textbf{SOC}_{g,t}\right), P_{in}\Delta \tau\right),\nonumber \\
+    E_{out} &= \text{min}\left(P_{out}\Delta \tau, \textbf{SOC}_{g,t}\right),\nonumber \\
+    P_{out} &= \text{max}\left(0, \text{min}\left(D_t, \textbf{CAP}_{g}\right)\right),\nonumber\\
+    P_{in} &= \text{min}\left(\lvert\text{min}\left(0, D_t\right)\rvert, \textbf{CAP}_g\right).\nonumber
+\end{align}
 
-Figure \ref{fig:hierarchy_algorithm} illustrates the algorithm.
+\noindent
+Since this algorithm is myopic, solution optimality is not guaranteed. Higher
+penetration of renewable energy and energy storage increases the influence of
+this myopia due to the unpredictability of these resources. Thus, this approach
+may be more ``realistic'' than an truly optimal dispatch. Additionally, this
+method is faster from reduced problem setup. Figure \ref{fig:hierarchy_algorithm} illustrates the flow of the
+algorithm.
 
 \begin{figure}[H]
     \centering
@@ -139,7 +158,3 @@ Figure \ref{fig:hierarchy_algorithm} illustrates the algorithm.
     \caption{The hierarchical dispatch flow.}
     \label{fig:hierarchy_algorithm}
 \end{figure}
-
-\subsubsection{Technology output calculation}
-
-Each technology object 
