updates bibfile and adds genetic alg section

--- a/docs/3-osier/30-intro.tex
+++ b/docs/3-osier/30-intro.tex
@@ -2,7 +2,7 @@
 \label{chapter:osier}
 
 This chapter introduces \acf{osier}, a novel open-source energy system modeling
-framework for \acl{moo} \cite{dotson_osier_nodate}. There are currently no
+framework for \acl{moo} \cite{dotson_osier_2024}. There are currently no
 \acp{esom} that enable \ac{moo} and \ac{osier} fills that gap. Figure 
 \ref{fig:osier_flow} illustrates the flow of data into and within \ac{osier}.
 
