--- a/docs/3-osier/33-dispatch-model.tex
+++ b/docs/3-osier/33-dispatch-model.tex
@@ -126,8 +126,9 @@ Since this algorithm is myopic, solution optimality is not guaranteed. Higher
 penetration of renewable energy and energy storage increases the influence of
 this myopia due to the unpredictability of these resources. Thus, this approach
 may be more ``realistic'' than an truly optimal dispatch. Additionally, this
-method is faster from reduced problem setup. Figure \ref{fig:hierarchy_algorithm} illustrates the flow of the
-algorithm.
+method is faster from reduced problem setup. Section
+\ref{section:dispatch_benchmark} demonstrates these differences. Figure 
+\ref{fig:hierarchy_algorithm} illustrates the flow of the algorithm.
 
 \begin{figure}[H]
     \centering
