--- a/docs/3-osier/34-mga.tex
+++ b/docs/3-osier/34-mga.tex
@@ -63,8 +63,12 @@ space. The tested points are omitted for clarity.
   \label{fig:3d-mga}
 \end{figure}
 
+\subsection{Farthest First Traversal}
+Previous studies emphasized that a key benefit of \ac{mga} is obtaining a set of near-optimal solutions that are maximally different
+in design space.
+
 Figure \ref{fig:mga-fft} demonstrates \ac{mga} with ``farthest-first-traversal.'' The left plot in Figure \ref{fig:mga-fft} shows the objective space for the same problem as in Figure \ref{fig:nd-mga}. The plot on the right shows the design
-space for same problem.
+space for same problem. Both plots show the Pareto front as red dots. The 
 
 \begin{figure}[H]
   \centering
